# fllog

./: .gitignore  .pre-commit-config.yaml  README.md  fllog.py  install.sh  pylintrc  pyproject.toml
.github/workflows/: main.yaml
fllog/: __init__.py  __main__.py  _fllog.py  _version.py  modemap.py
